@@ -81,6 +81,12 @@ Extensions
 Other Changes
 =============
 
+* No longer emit ``no-member`` in for loops that reference ``self`` if the binary operation that
+  started the for loop used references a ``self`` that is encapsulated in tuples or lists.
+
+  Ref PyCQA/astroid#1360
+  Closes #4826
+
 * Fixed crash from ``arguments-differ`` and ``arguments-renamed`` when methods were
   defined outside the top level of a class.
 
